--- a/src/app.css
+++ b/src/app.css
@@ -16,28 +16,59 @@
       white-space: normal;
 }
 
-.tableCompact THEAD TH {
+.pad {
+      padding-left: 1.5em !important;
+}
+
+.borderBox {
+      border: 1px blue solid !important;
+      overflow: hidden;
+      border-radius: 1em !important;
+      padding: 0 1em;
+}
+.tableCompact {
+      font-size: 1em;
+}
+
+.tableCompact THEAD TH, .tableTHEAD {
       padding-left: 0;
-      font-style: italic;
+      font-style:   italic;
+      font-weight:  900;
+}
+.tableCompact TBODY {
+      font-size: 0.9em;
 }
 .tableCompact TBODY TD {
       padding: 0;
       margin:  0;
+      vertical-align: top;
 }
 .tableCompact TBODY TD:first-child {
-      padding-left: 1em;
-      padding-right: 1em;
       text-wrap: no-wrap;
+      padding-right: 1em;
 }
-.tableCompact INPUT, .tableCompact BUTTON {
+.tableCompact INPUT, 
+.tableCompact BUTTON {
       padding: 0;
       margin: 0;
-      height: 2em;
+      height: 1em;
+      font-size: 1em;
+      height: 1.75em;
 }
 
+
+.td33 {
+      width: 33%;
+      max-width: 33%;
+}
 .td50 {
       width: 50%;
       max-width: 50%;
+}
+
+.zpFlexRow {
+      display: flex;
+      flex-direction: row;
 }
 
 .routeBar {
@@ -54,7 +85,12 @@ h1 {
 }
 
 
-.layoutApp {
+.layoutApp_off {
       max-width:850px; 
       margin:auto;
+}
+
+BUTTON {
+      padding-left:  0.5em;
+      padding-right: 0.5em;
 }
